--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@docusaurus/core": "^2.1.0",
-    "@docusaurus/preset-classic": "^2.1.0",
+    "@docusaurus/core": "^2.2.0",
+    "@docusaurus/module-type-aliases": "^2.2.0",
+    "@docusaurus/preset-classic": "^2.2.0",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.2.1",
+    "color-hash": "^2.0.1",
     "keen-slider": "^6.8.2",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
@@ -26,8 +28,8 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "^2.1.0",
     "@tsconfig/docusaurus": "^1.0.5",
+    "@types/color-hash": "^1.0.2",
     "@types/styled-components": "^5.1.25",
     "typescript": "^4.7.4"
   },
