--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@docusaurus/module-type-aliases": "^2.2.0",
     "@docusaurus/preset-classic": "^2.2.0",
     "@mdx-js/react": "^1.6.22",
+    "@radix-ui/react-dialog": "^1.0.2",
     "clsx": "^1.2.1",
     "color-hash": "^2.0.1",
     "keen-slider": "^6.8.2",
+    "phosphor-react": "^1.4.1",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
