--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@docusaurus/module-type-aliases": "^2.2.0",
     "@docusaurus/preset-classic": "^2.2.0",
     "@mdx-js/react": "^1.6.22",
+    "@radix-ui/react-checkbox": "^1.0.1",
     "@radix-ui/react-dialog": "^1.0.2",
+    "@radix-ui/react-radio-group": "^1.1.0",
     "@types/react-dom": "^18.0.8",
     "clsx": "^1.2.1",
     "color-hash": "^2.0.1",
@@ -28,7 +30,8 @@
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "use-react-screenshot": "^3.0.0"
   },
   "devDependencies": {
     "@tsconfig/docusaurus": "^1.0.5",
