--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "lib": [
-      "ES2021.String"
+      "ES2021.String",
+      "DOM"
     ]
   }
 }
