--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^2.3.1",
+    "@rocketseat/eslint-config": "^1.2.0",
     "@tsconfig/docusaurus": "^1.0.5",
     "@types/color-hash": "^1.0.2",
     "@types/react-dom": "^18.0.10",
     "@types/styled-components": "^5.1.26",
+    "eslint": "^8.35.0",
     "typescript": "^4.7.4"
   },
   "browserslist": {
