--- a/package.json
+++ b/package.json
@@ -15,17 +15,17 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@cmfcmf/docusaurus-search-local": "^1.2.0",
     "@docusaurus/core": "^3.7.0",
     "@docusaurus/plugin-google-gtag": "^3.7.0",
     "@docusaurus/preset-classic": "^3.7.0",
-    "@mdx-js/react": "^3.0.0",
+    "@mdx-js/react": "^3.1.0",
     "@radix-ui/react-checkbox": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-radio-group": "^1.2.0",
     "@radix-ui/react-slider": "^1.2.0",
     "clsx": "^2.0.0",
     "color-hash": "^2.0.2",
+    "docusaurus-lunr-search": "^3.6.0",
     "html2canvas": "^1.4.1",
     "keen-slider": "^6.8.6",
     "phosphor-react": "^1.4.1",
