--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "prism-react-renderer": "^2.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "styled-components": "^6.1.11",
-    "use-react-screenshot": "^4.0.0"
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^3.7.0",
